Store login state in local storage and avoid collapsing navbar

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -2,10 +2,6 @@
   background-color: #282c34;
 }
 
-.navbar {
-  margin-bottom: 1em;
-}
-
 .footer {
   position: absolute;
   width: 100%;
